fixed launch page alignment

--- a/client/src/components/OnTap/OnTap.css
+++ b/client/src/components/OnTap/OnTap.css
@@ -1,5 +1,3 @@
-
-
 .bg-img {
     position: relative;
     width: 100vw;
@@ -28,7 +26,7 @@
   }
 
   .loadingContent {
-    position: relative;
+    /* position: relative; */
     z-index: 10;
   }
 
@@ -42,58 +40,76 @@
 
 #circle {
     z-index: 50;
-    margin-left: 40%;
+    /* margin-left: 10%; */
     height: 75%;
-    margin-top: 10%;
+    /* margin-top: 10%; */
     filter: drop-shadow(9px 9px 9px rgba(0,0,0,0.2));
  
 }
 
  #ontapword {
-    z-index: 99;
-    height: 50%;
-    width: 50%;
-    margin-top: -44%;
-    margin-left: 51%;
-    color: white;
+    /* z-index: 99; */
+    /* height: 50%;
+    width: 50%; */
+    /* margin-top: -44%;
+    margin-left: 43%; */
+    /* color: white; */
     font-size: 140px;
     font-family: 'Boogaloo', cursive;
-    letter-spacing: 4px;
+    /* letter-spacing: 4px; */
     font-weight: bold;
     -webkit-text-stroke: 1.8px grey;
-    text-shadow:
+    /* text-shadow:
     3px 3px 0 #000,
   -1px -1px 0 #000,  
    1px -1px 0 #000,
    -1px 1px 0 #000,
-    1px 1px 0 #000;
+    1px 1px 0 #000; */
 
 } 
 
 #smolbeer {
-    z-index: 99;
+    margin-left: -4%;
+    margin-top: -2%;
+    margin-bottom: 2%;
+    /* z-index: 99; */
     height: 9%;
     width: 9%;
-    margin-left: 65.5%;
-    margin-top:-47%;
+    /* margin-left: 60%;
+    margin-top:-47%; */
     filter: drop-shadow(9px 9px 9px rgba(0,0,0,0.8));
 
 }
 
 #toplay {
-    z-index: 99;
-    color: white;
-    margin-left: 65%;
+    /* z-index: 99; */
+    /* color: white; */
+    /* margin-left: 65%; */
+    /* margin-top:-22%; */
     font-size: 12px;
-    letter-spacing: 3px;
-    margin-top:-22%;
+    /* letter-spacing: 3px; */
     font-weight: bold;
+    /* text-shadow:
+    2px 2px 0 #000,
+  -1px -1px 0 #000,  
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000; */
+
+
+}
+
+.same-stuff {
+    margin-top: -36%;
+    margin-left: 4%;
+    letter-spacing: 4px;
+    color: white;
+    z-index: 99;
     text-shadow:
     2px 2px 0 #000,
   -1px -1px 0 #000,  
    1px -1px 0 #000,
    -1px 1px 0 #000,
     1px 1px 0 #000;
-
 
 }
